# mini-task-2

./: .gitignore  README.md  main.py  pyproject.toml
agent/: cost_plot.py  cost_tracker.py  gemini_cache.py  loop.py  message_budget.py  models.py  openai_client.py  planner.py  prompts.py  state.py
hooks/: answer_without_code.py  base.py  chart_required.py  citation_validation.py  iteration_limit.py  research_completeness.py  tool_validation.py
sandbox/: Dockerfile  runner.py
tests/: test_feedback_items.py  test_file_tools.py  test_hooks.py  test_openai_client.py
tools/: bash_executor.py  file_tools.py  python_executor.py  registry.py  web_search.py
tui/: app.py  events.py  widgets.py
workspaces/default/: Tesla_Earnings_Analysis_2019_2024.md  Tesla_Earnings_Analysis_Q3_2024.md  tesla_earnings_analysis.md  tesla_q3_analysis.csv
